--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ footer a:hover, .content a:hover {
     width: 8rem;
     height: 8rem;
     float: right;
-    margin: 3.2rem 2rem auto 2rem;
+    margin: 3.2rem 2rem 2rem 2rem;
     filter: saturate(70%);
 
 }
